--- a/AppLabo1/app/src/main/res/layout/activity_main.xml
+++ b/AppLabo1/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,8 @@
         android:id="@+id/btnGo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView"
+        android:layout_marginTop="98dp"
+        android:text="@string/btngo"
         android:layout_below="@+id/textView"
-        android:layout_marginTop="91dp"
-        android:text="@string/btngo" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
